# seildr_model

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: references.bib  seildr_comparative_report.qmd  seildr_report_intermediate.qmd  seildr_report_minimal.qmd
src/seildr_sim/: __init__.py  aggregate_results.py  analyse_results.py  batch_scenario_runner.py  bayesian_inference_runner.py  bayesian_model.py  core_model.py  generate_scenarios_csv.py  inference_runner.py  multi_panel_analytics.py  path_resolver.py  scenario_simulator.py  simulate_runner.py
src/seildr_sim/scenarios/: scenarios.csv
